--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name = "instructions">Click the Number with the Larger Numerical Value \n Press Start to Begin \n Game Ends at -200 or 500 Points</string>
     <string name="start">Start</string>
     <string name="name">Enter Your Name</string>
+    <string name="reset">Reset</string>
 </resources>
